[package]
name = "poltergeist"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
glam = "0.24.0"
input-event-codes = "5.16.8"
manifest-dir-macros = "0.1.17"
map-range = "0.1.1"
mint = "0.5.9"
rustc-hash = "1.1.0"
stardust-xr-fusion = "0.40.1"
stardust-xr-molecules = "0.24.2"
tokio = "1.27.0"