[package]
name = "poltergeist"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
glam = "0.25.0"
input-event-codes = "5.16.8"
manifest-dir-macros = "0.1.18"
map-range = "0.1.2"
mint = "0.5.9"
rustc-hash = "1.1.0"
tokio = "1.32.0"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
# path = "../../core/fusion"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
# path = "../../molecules"
